# covas

./: BC_COVAS.py  COVAS_functions.py  LICENSE  MotM_COVAS.py  README.md  basic_COVAS.py  pyproject.toml
covaslib/: __init__.py  classification.py  covas.py  plotting.py  shap_analysis.py
delet/: main.py
results/: COVA_IDs_MotM.csv  COVA_IDs_Not MotM.csv  COVA_IDs_benign.csv  COVA_IDs_benign_balanced.csv  COVA_IDs_malignant.csv  COVA_matrix_MotM.csv  COVA_matrix_Not MotM.csv  COVA_matrix_benign.csv  COVA_matrix_benign_balanced.csv  COVA_matrix_malignant.csv  COVA_matrix_malignant_balanced.csv  COVA_score_MotM.csv  COVA_score_Not MotM.csv  COVA_score_benign.csv  COVA_score_benign_balanced.csv  COVA_score_malignant.csv  COVA_score_malignant_balanced.csv  ablation_std_vs_global_spearman_BC.csv  ablation_std_vs_global_spearman_MotM.csv  ablation_std_vs_global_topk_overlap_BC.csv  ablation_std_vs_global_topk_overlap_MotM.csv  ablation_z_vs_raw_spearman_BC.csv  ablation_z_vs_raw_spearman_MotM.csv  class_imbalance_summary.csv  comparison_LOF_zscore_vs_COVAS_BC.csv  comparison_RF_vs_FFNN_BC.csv  feature_space_extremeness_BC.csv  rf_COVA_IDs_benign.csv  rf_COVA_IDs_malignant.csv  rf_COVA_matrix_benign.csv  rf_COVA_matrix_malignant.csv  rf_COVA_score_benign.csv  rf_COVA_score_malignant.csv  uncertainty_vs_COVAS_benign.csv  uncertainty_vs_COVAS_malignant.csv
scripts/: Sensitifity_analysis_BC.py  Sensitigity_analysis_MotM.py  balancing_test.py  instance_level_analysis_BC.py  pipeline_full.py  pipeline_full_BC.py  pipeline_full_MotM.py  seed_stability_analysis_MotM.py  (+2 more)
(+30 files in other folders)
