

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covaslib"
version = "0.1.0"
description = "A library for Classification Outlier Value Assessment (COVAS)"
authors = [
    { name="Sebastian Roth", email="herrsebastianroth@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "tensorflow",
    "keras",
    "shap",
    "matplotlib",
    "scikit-learn"
]

[project.urls]
Repository = "https://github.com/SebClone/covas"